# sme-kt-zh-collaboration-forecasting

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/: feiertage.csv  sales_df.csv
notebooks/: EDA.ipynb  Lifelines_Modelling.ipynb  RSF_Modelling.ipynb
notebooks/artifacts/: fitting_scores.csv
sme-kt-zh-collaboration-forecasting/: .gitlab-ci.yml  README.md  pyproject.toml
src/sme_kt_zh_collaboration_forecasting/: EDA.py  modelling.py  utils.py
tests/: test_version.py
